Сверстана секция 'Hero'

--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -1,6 +1,7 @@
 @import "site-header";
 @import "site-navigation";
 @import "user-navigation";
+@import "hero";
 @import "button";
 @import "site-footer";
 @import "site-footer-navigation";
