--- a/app/scss/helpers/_vars.scss
+++ b/app/scss/helpers/_vars.scss
@@ -3,3 +3,5 @@ $serif: "Times New Roman", "Georgia", "Baskerville", serif;
 $color-white: #fff;
 $color-black: #000;
 $color-bunker: #151c22;
+$color-athens-gray: #f1f2f4;
+$color-rolling-stone: #727a82;
