Сверстана секция 'Bestsellers'

--- a/app/pug/layout/main-template.pug
+++ b/app/pug/layout/main-template.pug
@@ -9,6 +9,7 @@ block mixins
   include ../mixins/_site-navigation.pug
   include ../mixins/_site-footer-navigation.pug
   include ../mixins/_socials-link.pug
+  include ../mixins/_products-card.pug
 
 doctype html
 html(lang="en" class= htmlClass).full-height
