--- a/app/pug/sections/_hero.pug
+++ b/app/pug/sections/_hero.pug
@@ -1,4 +1,4 @@
-section.hero
+section.hero.index-page__hero
   .container.hero__container
     h1.visually-hidden Nîmes - online store denim wear
     a(href="#").hero__link-arrow
