--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -1,8 +1,13 @@
+@import "index-page";
 @import "site-header";
 @import "site-navigation";
 @import "user-navigation";
 @import "hero";
 @import "button";
+@import "bestsellers";
+@import "section-header";
+@import "products";
+@import "products-card";
 @import "site-footer";
 @import "site-footer-navigation";
 @import "socials";
