Сверстана секция 'News'

--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -8,6 +8,8 @@
 @import "section-header";
 @import "products";
 @import "products-card";
+@import "news";
+@import "news-post";
 @import "site-footer";
 @import "site-footer-navigation";
 @import "socials";
