Сверстана секция 'Categories'

--- a/app/pug/sections/_bestsellers.pug
+++ b/app/pug/sections/_bestsellers.pug
@@ -1,4 +1,4 @@
-section.bestsellers.index-page__bestsellers
+section.bestsellers.index-page__bestsellers#bestsellers
   .container
     .section-header.bestsellers__section-header
       h2.section-header__title Bestsellers
