--- a/app/pug/sections/_hero.pug
+++ b/app/pug/sections/_hero.pug
@@ -1,7 +1,7 @@
 section.hero.index-page__hero
   .container.hero__container
     h1.visually-hidden Nîmes - online store denim wear
-    a(href="#").hero__link-arrow
+    a(href="#bestsellers").hero__link-arrow
     .hero__content
       .hero__text-content
         p.hero__slogan The quality you deserve
