--- a/app/scss/blocks/_index-page.scss
+++ b/app/scss/blocks/_index-page.scss
@@ -5,3 +5,11 @@
 .index-page__bestsellers {
   margin-bottom: 65px;
 }
+
+.index-page__news {
+  margin-bottom: 102px;
+}
+
+.index-page__categories {
+  margin-bottom: 104px;
+}
