--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -10,6 +10,7 @@
 @import "products-card";
 @import "news";
 @import "news-post";
+@import "categories";
 @import "site-footer";
 @import "site-footer-navigation";
 @import "socials";
