--- a/app/scss/blocks/_hero.scss
+++ b/app/scss/blocks/_hero.scss
@@ -9,8 +9,9 @@
 
 .hero__link-arrow {
   align-self: flex-end;
-  margin-right: 30px;
+  margin-right: 21px;
   margin-bottom: 48px;
+  margin-left: 9px;
   width: 20px;
   height: 30px;
   background-image: url("../img/arrow-bottom.svg");
