Сверстана секция на странице каталога 'Catalog top'

--- a/app/pug/layout/main-template.pug
+++ b/app/pug/layout/main-template.pug
@@ -10,6 +10,7 @@ block mixins
   include ../mixins/_site-footer-navigation.pug
   include ../mixins/_socials-link.pug
   include ../mixins/_products-card.pug
+  include ../mixins/_breadcrumbs.pug
 
 doctype html
 html(lang="en" class= htmlClass).full-height
