Сделан выпадающий список и сверстаны карточки каталога 'Woman Jackets'

--- a/app/pug/sections/_catalog-top.pug
+++ b/app/pug/sections/_catalog-top.pug
@@ -1,4 +1,4 @@
-section.catalog-top
+section.catalog-top.catalog-page__catalog-top
   .container.catalog-top__container
     .catalog-top__text-content
       ul.breadcrumbs.catalog-top__breadcrumbs
