--- a/app/pug/sections/_categories.pug
+++ b/app/pug/sections/_categories.pug
@@ -3,5 +3,5 @@ section.categories.index-page__categories
     .section-header.categories__section-header
       h2.section-header__title Shop by category
       a(href="#").section-header__link View all
-    ul.products
+    ul.products.categories__products
       +products-card(categories)
