--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -15,4 +15,7 @@
 @import "site-footer-navigation";
 @import "socials";
 @import "breadcrumbs";
+@import "catalog-page";
 @import "catalog-top";
+@import "catalog";
+@import "dropdown-filter";
