--- a/app/pug/mixins/_products-card.pug
+++ b/app/pug/mixins/_products-card.pug
@@ -2,7 +2,10 @@ mixin products-card(array)
   each item in array
     li.products__card.products-card
       a(href= item.productUrl).products-card__link
-        img(src= item.productImage width="270" height="349", alt= item.productTitle).products-card__image
+        if array === catalogJackets
+          img(src= item.productImage width="243" height="270", alt= item.productTitle).products-card__image
+        else
+          img(src= item.productImage width="270" height="349", alt= item.productTitle).products-card__image
       .products-card__text
         h3.products-card__title= item.productTitle
         if item.productPrice
