--- a/app/pug/sections/_bestsellers.pug
+++ b/app/pug/sections/_bestsellers.pug
@@ -3,5 +3,5 @@ section.bestsellers.index-page__bestsellers#bestsellers
     .section-header.bestsellers__section-header
       h2.section-header__title Bestsellers
       a(href="#").section-header__link View all
-    ul.products
+    ul.products.bestsellers__products
       +products-card(bestsellers)
