--- a/app/scss/blocks/_catalog.scss
+++ b/app/scss/blocks/_catalog.scss
@@ -1,5 +1,5 @@
 .catalog__products {
-  margin: 0 -33px;
+  margin: 0 -33px 39px;
 }
 
 .catalog__filter {
@@ -10,4 +10,14 @@
 
 .catalog__products .products__card {
   margin: 22px 33px;
+}
+
+.catalog__cards-counter {
+  margin: 0 auto;
+  margin-bottom: 40px;
+  max-width: 200px;
+}
+
+.catalog__load-more-button {
+  text-align: center;
 }
