--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -20,3 +20,13 @@
 @import "catalog";
 @import "dropdown-filter";
 @import "cards-counter";
+@import "card-page";
+@import "product";
+@import "full-card";
+@import "full-card-gallery";
+@import "full-card-slider";
+@import "full-card-slider-thumbs";
+@import "full-card-info";
+@import "full-card-color";
+@import "full-card-size";
+@import "extra";
