--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -2,6 +2,7 @@
 @import "site-header";
 @import "site-navigation";
 @import "user-navigation";
+@import "burger-button";
 @import "hero";
 @import "button";
 @import "bestsellers";
