--- a/app/scss/blocks/_site-footer-navigation.scss
+++ b/app/scss/blocks/_site-footer-navigation.scss
@@ -1,13 +1,14 @@
 .site-footer-navigation {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.site-footer-navigation__item:not(:last-of-type) {
-  margin-right: 35px;
+.site-footer-navigation__item {
+  margin: 0 17.5px;
 }
 
 .site-footer-navigation__link {
