--- a/app/scss/blocks/_site-navigation.scss
+++ b/app/scss/blocks/_site-navigation.scss
@@ -1,8 +1,15 @@
 .site-navigation__list {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
+
+  @include px720 {
+    justify-content: center;
+    padding: 20px 0;
+  }
 }
 
 .site-navigation__item:not(:last-of-type) {
