--- a/app/pug/sections/_index-main.pug
+++ b/app/pug/sections/_index-main.pug
@@ -1,5 +1,5 @@
 main.main
-  //- include _hero.pug
+  include _hero.pug
 //-   include _bestsellers.pug
 //-   include _news.pug
 //-   include _categories.pug
