--- a/app/scss/blocks/_user-navigation.scss
+++ b/app/scss/blocks/_user-navigation.scss
@@ -8,6 +8,10 @@
 
 .user-navigation__item:not(:last-of-type) {
   margin-right: 28px;
+
+  @include px375 {
+    margin-right: 20px;
+  }
 }
 
 .user-navigation__link {
