--- a/app/scss/blocks/_bestsellers.scss
+++ b/app/scss/blocks/_bestsellers.scss
@@ -4,4 +4,9 @@
 
 .bestsellers__products {
   margin: 0 -15px;
+
+  // @include px1230 {
+  //   margin: 0 auto;
+  //   max-width: 990px;
+  // }
 }
