--- a/app/scss/blocks/_products.scss
+++ b/app/scss/blocks/_products.scss
@@ -1,7 +1,7 @@
 .products {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   list-style-type: none;
   padding: 0;
 }
