Адаптирована главная страница

--- a/app/pug/sections/_news.pug
+++ b/app/pug/sections/_news.pug
@@ -4,7 +4,8 @@ section.news.index-page__news
       h2.section-header__title News
       a(href="#").section-header__link View all
     article.news-post
-      img(src="img/news-post.jpg" width="700" height="370", alt="G- Star Updates Its Sustainable Collection").news-post__image
+      .news-post__image-wrapper
+        img(src="img/news-post.jpg" width="700" height="370", alt="G- Star Updates Its Sustainable Collection").news-post__image
       .news-post__outer
         .news-post__inner
           h3.news-post__title G- Star Updates Its Sustainable Collection
