--- a/app/scss/blocks/_products.scss
+++ b/app/scss/blocks/_products.scss
@@ -1,11 +1,44 @@
 .products {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   list-style-type: none;
   padding: 0;
+
+  @include px720 {
+    padding: 0 50px;
+  }
+
+  @include px500 {
+    padding: 0;
+  }
+
+  @include px375 {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .products__card {
+  flex-basis: calc((100% - 30px * 4) / 4);
   margin: 15px;
+
+  @include px950 {
+    flex-basis: calc((100% - 30px * 3) / 3);
+  }
+
+  @include px720 {
+    flex-basis: calc((100% - 30px * 2) / 2);
+  }
+
+  @include px375 {
+    flex-grow: 0;
+    flex-basis: 270px;
+  }
+}
+
+.products-card__image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
