--- a/app/scss/blocks/_section-header.scss
+++ b/app/scss/blocks/_section-header.scss
@@ -5,14 +5,20 @@
 }
 
 .section-header__title {
-  margin: 0;
+  margin: 0 30px 0 0;
   font-weight: 700;
   font-size: 32px;
   line-height: 38px;
   color: $color-bunker;
+
+  @include px500 {
+    font-size: 26px;
+    line-height: 32px;
+  }
 }
 
 .section-header__link {
+  flex-shrink: 0;
   margin-bottom: 6px;
   border-bottom: 2px solid $color-bunker;
   padding: 2px 5px;
