--- a/app/pug/sections/_catalog-top.pug
+++ b/app/pug/sections/_catalog-top.pug
@@ -3,6 +3,6 @@ section.catalog-top.catalog-page__catalog-top
     .catalog-top__text-content
       ul.breadcrumbs.catalog-top__breadcrumbs
         +breadcrumbs(breadcrumbs)
-      h1.catalog-top__title Denim collection #[br] fall 2019
+      h1.catalog-top__title Denim collection fall 2019
     .catalog-top__media-content
       img(src="img/catalog-top-image.jpg" width="299" height="260", alt="Denim collection fall 2019").catalog-top__image
