--- a/app/scss/blocks/_module.scss
+++ b/app/scss/blocks/_module.scss
@@ -1,5 +1,6 @@
 @import "index-page";
 @import "site-header";
+@import "logo";
 @import "site-navigation";
 @import "user-navigation";
 @import "burger-button";
