--- a/app/pug/sections/_catalog.pug
+++ b/app/pug/sections/_catalog.pug
@@ -9,7 +9,7 @@ section.catalog.catalog-page__catalog
         li(tabindex="0").dropdown-filter__option Price: High to Low
         li(tabindex="0").dropdown-filter__option Name: A-z
         li(tabindex="0").dropdown-filter__option Name: Z-a
-    ul.products.catalog__products
+    ul.products.catalog__products.catalog-page__products
       +products-card(catalogJackets)
     .cards-counter.catalog__cards-counter
       p.cards-counter__text Showing #[span.cards-counter__current 8] of #[span.cards-counter__total 45] items
