--- a/app/pug/sections/_header.pug
+++ b/app/pug/sections/_header.pug
@@ -5,10 +5,10 @@ header.site-header
         span.burger-button__line
     if htmlClass === "index-page"
       a.logo.site-header__logo
-        img(src="img/header-logo.svg" width="75" height="17", alt="Online store logo - Nimes")
+        img(src="img/header-logo.svg" width="75" height="17", alt="Online store logo - Nimes").logo__image
     else
       a(href="/" class="logo site-header__logo")
-        img(src="img/header-logo.svg" width="75" height="17", alt="Online store logo - Nimes")
+        img(src="img/header-logo.svg" width="75" height="17", alt="Online store logo - Nimes").logo__image
     nav.site-navigation.site-header__site-navigation
       ul.site-navigation__list
         +site-navigation(siteNavigation)
