--- a/app/scss/blocks/_breadcrumbs.scss
+++ b/app/scss/blocks/_breadcrumbs.scss
@@ -6,13 +6,26 @@
 }
 
 .breadcrumbs__item:not(:last-of-type) {
-  margin-right: 11px;
+  position: relative;
+  margin-right: 30px;
+
+  @include px600 {
+    margin-right: 18px;
+  }
 }
 
 .breadcrumbs__item:not(:last-of-type)::after {
   content: "/";
+  position: absolute;
+  right: -19px;
+  top: 3px;
+  display: block;
   padding-left: 7px;
   color: $color-rolling-stone;
+
+  @include px600 {
+    right: -12px;
+  }
 }
 
 .breadcrumbs__link {
@@ -21,6 +34,10 @@
   line-height: 21px;
   text-decoration: none;
   color: $color-rolling-stone;
+
+  @include px810 {
+    font-size: 16px;
+  }
 }
 
 .breadcrumbs__link--active {
