--- a/app/scss/blocks/_catalog-top.scss
+++ b/app/scss/blocks/_catalog-top.scss
@@ -1,5 +1,9 @@
 .catalog-top {
   background-color: $color-athens-gray;
+
+  @include px720 {
+    padding-top: 60px;
+  }
 }
 
 .catalog-top__container {
@@ -7,31 +11,68 @@
   align-items: center;
   justify-content: center;
   margin-top: -7px;
+
+  @include px810 {
+    justify-content: space-between;
+  }
+
+  @include px720 {
+    flex-direction: column;
+  }
 }
 
 .catalog-top__text-content {
   padding-top: 4px;
+
+  @include px720 {
+    align-self: flex-start;
+    margin-bottom: 40px;
+  }
 }
 
 .catalog-top__breadcrumbs {
   margin-bottom: 26px;
+
+  @include px720 {
+    margin-bottom: 16px;
+  }
 }
 
 .catalog-top__title {
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 2px;
+  max-width: 334px;
   font-weight: 700;
   font-size: 32px;
   line-height: 1.25;
   text-transform: capitalize;
   color: $color-bunker;
+
+  @include px720 {
+    max-width: 100%;
+  }
 }
 
 .catalog-top__media-content {
   position: relative;
   margin-right: 71px;
-  margin-left: 88px;
+  margin-left: 67px;
+
+  @include px950 {
+    margin-right: 30px;
+    margin-left: 110px;
+  }
+
+  @include px810 {
+    margin-right: 30px;
+    margin-left: 60px;
+  }
+
+  @include px720 {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
 }
 
 .catalog-top__media-content::before {
@@ -44,6 +85,10 @@
   height: 176px;
   background-image: url("../img/catalog-top-right-decor.png");
   background-repeat: no-repeat;
+
+  @include px375 {
+    right: -15px;
+  }
 }
 
 .catalog-top__media-content::after {
@@ -55,10 +100,17 @@
   height: 135px;
   background-image: url("../img/catalog-top-left-decor.png");
   background-repeat: no-repeat;
+
+  @include px375 {
+    left: -15px;
+  }
 }
 
 .catalog-top__image {
   position: relative;
   z-index: 10;
   display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
