--- a/app/scss/helpers/_mixins.scss
+++ b/app/scss/helpers/_mixins.scss
@@ -26,6 +26,14 @@
 
 // @include px500 {}
 
+@mixin px600 {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
+
+// @include px600 {}
+
 @mixin px720 {
   @media (max-width: 720px) {
     @content;
