--- a/app/scss/blocks/_card-page.scss
+++ b/app/scss/blocks/_card-page.scss
@@ -1,6 +1,10 @@
 .card-page__product {
-  margin-top: 48px;
+  margin-top: 122px;
   margin-bottom: 121px;
+
+  @include px720 {
+    margin-top: 100px;
+  }
 }
 
 .card-page__extra {
