--- a/app/scss/blocks/_full-card-slider-thumbs.scss
+++ b/app/scss/blocks/_full-card-slider-thumbs.scss
@@ -1,3 +1,10 @@
 .full-card-slider-thumbs__image {
   display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+
+  @include px375 {
+    display: none;
+  }
 }
