--- a/app/pug/layout/main-template.pug
+++ b/app/pug/layout/main-template.pug
@@ -19,7 +19,8 @@ html(lang="en" class= htmlClass).full-height
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= pageTitle
-    link(rel="shortcut icon" href="img/favicon.ico")
+    link(rel="shortcut icon" type="image/svg+xml" href="img/favicon.svg")
+    link(rel="shortcut icon" type="image/png" href="img/favicon.png")
     block styles
       link(rel="stylesheet", href="css/styles.min.css")
   body(class= bodyClass).full-height
