Изменен файл с данными pug

--- a/app/pug/sections/_bestsellers.pug
+++ b/app/pug/sections/_bestsellers.pug
@@ -4,4 +4,4 @@ section.bestsellers.index-page__bestsellers#bestsellers
       h2.section-header__title Bestsellers
       a(href="#").section-header__link View all
     ul.products.bestsellers__products
-      +products-card(bestsellers)
+      +products-card(pugData.bestsellers)
