--- a/app/pug/sections/_catalog.pug
+++ b/app/pug/sections/_catalog.pug
@@ -10,7 +10,7 @@ section.catalog.catalog-page__catalog
         li(tabindex="0").dropdown-filter__option Name: A-z
         li(tabindex="0").dropdown-filter__option Name: Z-a
     ul.products.catalog__products.catalog-page__products
-      +products-card(catalogJackets)
+      +products-card(pugData.catalogJackets)
     .cards-counter.catalog__cards-counter
       p.cards-counter__text Showing #[span.cards-counter__current 8] of #[span.cards-counter__total 45] items
       span.cards-counter__progress-line
