--- a/app/pug/sections/_categories.pug
+++ b/app/pug/sections/_categories.pug
@@ -4,4 +4,4 @@ section.categories.index-page__categories
       h2.section-header__title Shop by category
       a(href="#").section-header__link View all
     ul.products.categories__products
-      +products-card(categories)
+      +products-card(pugData.categories)
