--- a/app/pug/sections/_extra.pug
+++ b/app/pug/sections/_extra.pug
@@ -4,4 +4,4 @@ section.extra.card-page__extra
       h2.section-header__title You may also like
       a(href="#").section-header__link View all
     ul.products.extra__products
-      +products-card(extraProducts)
+      +products-card(pugData.extraProducts)
