--- a/app/pug/sections/_footer.pug
+++ b/app/pug/sections/_footer.pug
@@ -8,6 +8,6 @@ footer.site-footer
         img(src="img/footer-logo.svg" width="75" height="17", alt="Online store logo - Nimes")
     .site-footer__navigation
       ul.site-footer-navigation
-        +siteFooterNavigation(siteFooterNavigation)
+        +siteFooterNavigation(pugData.siteFooterNavigation)
     ul.socials
-      +socialsLink(socials)
+      +socialsLink(pugData.socials)
