--- a/app/pug/sections/_header.pug
+++ b/app/pug/sections/_header.pug
@@ -11,7 +11,7 @@ header.site-header
         img(src="img/header-logo.svg" width="75" height="17", alt="Online store logo - Nimes").logo__image
     nav.site-navigation.site-header__site-navigation
       ul.site-navigation__list
-        +site-navigation(siteNavigation)
+        +site-navigation(pugData.siteNavigation)
     ul.user-navigation.site-header__user-navigation
       li.user-navigation__item
         a(href="#").user-navigation__link.user-navigation__link--search
