--- a/app/pug/sections/_catalog-top.pug
+++ b/app/pug/sections/_catalog-top.pug
@@ -2,7 +2,7 @@ section.catalog-top.catalog-page__catalog-top
   .container.catalog-top__container
     .catalog-top__text-content
       ul.breadcrumbs.catalog-top__breadcrumbs
-        +breadcrumbs(breadcrumbs)
+        +breadcrumbs(pugData.breadcrumbs)
       h1.catalog-top__title Denim collection fall 2019
     .catalog-top__media-content
       img(src="img/catalog-top-image.jpg" width="299" height="260", alt="Denim collection fall 2019").catalog-top__image
