--- a/app/scss/helpers/_mixins.scss
+++ b/app/scss/helpers/_mixins.scss
@@ -11,6 +11,44 @@
   }
 }
 
+@mixin outline {
+  outline: 2px solid var(--color-outline);
+  outline-offset: 2px;
+}
+
+/* @include outline; */
+
+@mixin outline-inner {
+  outline: 2px solid var(--color-outline);
+  outline-offset: -2px;
+}
+
+/* @include outline-inner; */
+
+@mixin hover {
+  @media (hover: hover) {
+    &:hover {
+      @content;
+    }
+  }
+}
+
+/* @include hover {} */
+
+@mixin hover-focus {
+  @media (hover: hover) {
+    &:focus {
+      @content;
+    }
+
+    &:hover {
+      @content;
+    }
+  }
+}
+
+/* @include hover-focus {} */
+
 @mixin px375 {
   @media (max-width: 375px) {
     @content;
