--- a/app/scss/blocks/_section-header.scss
+++ b/app/scss/blocks/_section-header.scss
@@ -28,9 +28,8 @@
   text-decoration: none;
   color: $color-bunker;
   transition: opacity 0.2s ease-in-out;
-}
 
-.section-header__link:hover,
-.section-header__link:focus {
-  opacity: 0.6;
+  @include hover {
+    opacity: 0.6;
+  }
 }
