--- a/app/scss/blocks/_products-card.scss
+++ b/app/scss/blocks/_products-card.scss
@@ -2,11 +2,10 @@
   display: block;
   margin-bottom: 21px;
   transition: opacity 0.3s ease-in-out;
-}
 
-.products-card__link:hover,
-.products-card__link:focus {
-  opacity: 0.7;
+  @include hover {
+    opacity: 0.7;
+  }
 }
 
 .products-card__image {
