--- a/app/scss/blocks/_user-navigation.scss
+++ b/app/scss/blocks/_user-navigation.scss
@@ -23,11 +23,10 @@
   background-repeat: no-repeat;
   background-color: transparent;
   transition: opacity 0.2s linear;
-}
 
-.user-navigation__link:hover,
-.user-navigation__link:focus {
-  opacity: 0.65;
+  @include hover {
+    opacity: 0.65;
+  }
 }
 
 .user-navigation__link--search {
