Добавить полифил Focus-Visible и фокусное состояние активных элементов

--- a/app/pug/sections/_product-card-description.pug
+++ b/app/pug/sections/_product-card-description.pug
@@ -14,15 +14,15 @@
     .full-card-info__size.full-card-size
       h2.full-card__subtitle Size
       .full-card-size__selection
-        input(type="radio", name="size" id="size_1" class="full-card-size__item")
+        input(type="radio", tabindex="0" name="size" id="size_1" class="full-card-size__item")
         label(for="size_1" class="full-card-size__label") XS
-        input(checked type="radio", name="size" id="size_2" class="full-card-size__item")
+        input(checked type="radio", tabindex="0" name="size" id="size_2" class="full-card-size__item")
         label(for="size_2" class="full-card-size__label") S
-        input(type="radio", name="size" id="size_3" class="full-card-size__item")
+        input(type="radio", tabindex="0" name="size" id="size_3" class="full-card-size__item")
         label(for="size_3" class="full-card-size__label") M
-        input(type="radio", name="size" id="size_4" class="full-card-size__item")
+        input(type="radio", tabindex="0" name="size" id="size_4" class="full-card-size__item")
         label(for="size_4" class="full-card-size__label") L
-        input(type="radio", name="size" id="size_5" class="full-card-size__item")
+        input(type="radio", tabindex="0" name="size" id="size_5" class="full-card-size__item")
         label(for="size_5" class="full-card-size__label") XL
     p.full-card-info__price $160
     .full-card-info__button
