--- a/app/scss/blocks/_site-footer-navigation.scss
+++ b/app/scss/blocks/_site-footer-navigation.scss
@@ -17,6 +17,10 @@
   text-decoration: none;
   color: $color-white;
 
+  &:focus {
+    @include outline;
+  }
+
   @include hover {
     text-decoration: underline;
   }
