--- a/app/scss/blocks/_site-navigation.scss
+++ b/app/scss/blocks/_site-navigation.scss
@@ -24,6 +24,10 @@
   text-decoration: none;
   color: $color-bunker;
 
+  &:focus {
+    @include outline;
+  }
+
   @include hover {
     &::before {
       left: 0;
