--- a/app/scss/blocks/_user-navigation.scss
+++ b/app/scss/blocks/_user-navigation.scss
@@ -24,6 +24,10 @@
   background-color: transparent;
   transition: opacity 0.2s linear;
 
+  &:focus {
+    @include outline;
+  }
+
   @include hover {
     opacity: 0.65;
   }
