--- a/app/scss/helpers/_module.scss
+++ b/app/scss/helpers/_module.scss
@@ -1,5 +1,6 @@
 @import "vars";
 @import "mixins";
+@import "focus-visible";
 @import "container";
 @import "visually-hidden";
 @import "no-scroll";
