--- a/app/scss/helpers/_vars.scss
+++ b/app/scss/helpers/_vars.scss
@@ -6,3 +6,4 @@ $color-bunker: #151c22;
 $color-athens-gray: #f1f2f4;
 $color-rolling-stone: #727a82;
 $color-mercury: #e5e5e5;
+$color-outline: #0bf;
