--- a/app/scss/blocks/_full-card-color.scss
+++ b/app/scss/blocks/_full-card-color.scss
@@ -15,11 +15,16 @@
   cursor: pointer;
 }
 
+.full-card-color__item:focus {
+  outline: 2px solid $color-outline;
+  outline-offset: 6px;
+}
+
 .full-card-color__item::before {
   content: "";
   position: absolute;
-  left: -2px;
-  top: -2px;
+  left: -3px;
+  top: -3px;
   border-radius: 50%;
   width: 22px;
   height: 22px;
@@ -29,8 +34,8 @@
 .full-card-color__item::after {
   content: "";
   position: absolute;
-  left: -3px;
-  top: -3px;
+  left: -4px;
+  top: -4px;
   border: 4px solid $color-athens-gray;
   border-radius: 50%;
   width: 24px;
@@ -39,8 +44,8 @@
 }
 
 .full-card-color__item:checked::after {
-  left: -1px;
-  top: -1px;
+  left: -2px;
+  top: -2px;
   border: 3px solid $color-athens-gray;
   border-radius: 50%;
   width: 20px;
