--- a/app/scss/blocks/_section-header.scss
+++ b/app/scss/blocks/_section-header.scss
@@ -29,6 +29,10 @@
   color: $color-bunker;
   transition: opacity 0.2s ease-in-out;
 
+  &:focus {
+    @include outline;
+  }
+
   @include hover {
     opacity: 0.6;
   }
